--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(248, 249, 250);
   border-top: solid 7px rgb(255, 129, 56);
-
 }
 
 .App {
@@ -39,7 +38,8 @@ body {
   margin: 0 auto;
   padding-left: 20px;
   border-left: solid 20px #eee;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
+  margin-bottom:70px;
 }
 
 .App-logo {
@@ -113,6 +113,17 @@ code {
   border-bottom: none;
 }
 
+a>h2 {
+  transition: 0.2s;
+}
+
+a>h2:hover {
+  color: white;
+  background: rgb(255, 129, 56);
+  padding-left: 10px;
+
+}
+
 h1 {
   display: block;
   font-family: 'Rajdhani', sans-serif;
@@ -136,7 +147,7 @@ h1 {
 }
 
 .lightest {
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
 .companies {
@@ -172,7 +183,10 @@ h1 {
   font-weight: 700;
 }
 
-.aboutpagecontainer {}
+.companyurl:hover {
+  color: white;
+  background: rgb(255, 129, 56);
+}
 
 h1,
 h2,
@@ -183,8 +197,25 @@ h6 {
   text-align: left;
 }
 
+.footerbox {
+
+  text-align: left;
+  margin-top: 50px;
+  color: rgb(139, 139, 139);
+}
+
+.companyname {
+  display: block;
+  font-size: 3em;
+  font-weight: 600;
+}
+
 .greentext {
-  color: rgb(0, 105, 65);
+  color: rgba(0, 133, 82, 0.842);
+}
+
+.redtext {
+  color: rgba(248, 42, 42, 0.671);
 }
 
 .paragraph {
@@ -192,4 +223,16 @@ h6 {
   color: #333333;
   text-align: left;
   font-weight: 500;
+}
+
+td{
+  border-bottom:solid 2px rgba(211, 211, 211, 0.549);
+  height:36px;
+}
+
+tr{
+  transition:0.6s;
+}
+tr:hover{
+  background-color: rgba(255, 255, 0, 0.457);
 }
